--- a/sass/normalize-sass/stylesheets/screen.css
+++ b/sass/normalize-sass/stylesheets/screen.css
@@ -46,9 +46,9 @@ body .container .title #bookmark-icon {
 /* line 49, ../sass/screen.scss */
 body .container .title .tagline {
   color: gray;
-  line-height: 6em;
-  margin: 30px 0 0 30px;
+  margin: 0 0 30px 0;
   font-family: 'Metamorphous';
+  clear: both;
 }
 /* line 56, ../sass/screen.scss */
 body .container .title:after {
@@ -59,51 +59,60 @@ body .container .title:after {
 /* line 61, ../sass/screen.scss */
 body .container .main-content {
   max-width: 960px;
-  line-height: 1.5em;
-  font-size: 1.7em;
   text-align: left;
   font-family: 'Crimson Text',serif;
   border-top: 1px dashed lightgrey;
   border-bottom: 1px dashed lightgrey;
   padding: 10px 0;
 }
-/* line 70, ../sass/screen.scss */
+/* line 68, ../sass/screen.scss */
 body .container .main-content .introduction {
   width: 840px;
   margin-left: 120px;
 }
-/* line 73, ../sass/screen.scss */
+/* line 71, ../sass/screen.scss */
 body .container .main-content .introduction p:first-letter {
   font-size: 3em;
   padding: 10px;
   float: left;
   font-family: 'Metamorphous';
 }
-/* line 80, ../sass/screen.scss */
+/* line 78, ../sass/screen.scss */
 body .container .main-content .introduction p {
   color: #3C3B39;
+  line-height: 1.5em;
+  font-size: 1.7em;
 }
 /* line 86, ../sass/screen.scss */
 body .container .options .book-details, body .container .options .next-book {
-  width: 120px;
+  width: 360px;
   display: inline-block;
-  margin-left: 480px;
-  margin-top: 20px;
+  margin: 20px 0 20px 120px;
+  text-align: center;
+  color: grey;
+  border: 1px dashed lightgrey;
+  box-sizing: border-box;
 }
-/* line 91, ../sass/screen.scss */
+/* line 94, ../sass/screen.scss */
+body .container .options .book-details .headline, body .container .options .next-book .headline {
+  font-size: 2em;
+}
+/* line 100, ../sass/screen.scss */
 body .container .options .book-details svg, body .container .options .next-book svg {
   height: 40px;
   width: 120px;
 }
-/* line 95, ../sass/screen.scss */
+/* line 104, ../sass/screen.scss */
 body .container .options .book-details #book-12-icon, body .container .options .next-book #book-12-icon {
   fill: #D37395;
 }
-/* line 99, ../sass/screen.scss */
-body .container .options .next-book {
-  margin-left: 240px;
-}
-/* line 102, ../sass/screen.scss */
+/* line 110, ../sass/screen.scss */
 body .container .options .next-book #note-13-icon {
   fill: #CAD7C5;
+}
+/* line 116, ../sass/screen.scss */
+body .container footer {
+  width: 100%;
+  text-align: center;
+  margin: 30px 0;
 }
