--- a/sass/normalize-sass/sass/screen.scss
+++ b/sass/normalize-sass/sass/screen.scss
@@ -6,7 +6,7 @@
 @import url(http://weloveiconfonts.com/api/?family=fontawesome);
 
 $col:120px;
-$title-color:#F6E4BA;
+$title-color:#f7b86d;
 
 //Images for stop and carry on
 $img-height:40px;
@@ -16,7 +16,6 @@ $font-size:1em;
 html {
 	height:100%;
 }
-
 p {
 	margin:0;
 }
@@ -36,7 +35,7 @@ body {
 				text-align:left;
 				color:$title-color;
 				float:left;
-				margin:30px 0 20px 0;
+				margin:30px 0 0px 0;
 			} 
 			svg {
 				height:48px;
@@ -47,10 +46,11 @@ body {
 				fill:$title-color;
 			}
 			.tagline {
-				color:gray;
+				color:#3C3B39;
 				margin:0 0 30px 0;
-				font-family:'Metamorphous';
+				font-family:'Crimson Text';
 				clear:both;
+				font-size:1.3em;
 			}
 		} // end title
 		.title:after {
@@ -79,38 +79,58 @@ body {
 						color:#3C3B39;
 						line-height:1.5em;
 						font-size:$font-size*1.7;
+						padding-bottom:10px;
 					}
 				} // end intorduction
 		} // END main content
 		.options {
-			.book-details {
+			.book-button {
 				width:$col*3;
 				display:inline-block;
-				margin:20px 0 20px $col;
+				margin:20px 0 10px $col;
 				text-align:center;
 				color:grey;
-				border:1px dashed lightgrey;
 				box-sizing:border-box;
 				.headline {
-					font-size:2em;
+					font-size:1.4em;
+					margin:20px $col/2 0 $col/2;
+					border-top:1px solid ;
+					border-bottom:1px solid;
+					line-height:2.8em;
+					cursor: pointer;
+					color:#3c3b39;
+					a {
+						text-decoration:none;
+						color:#3c3b39;	
+					}
+					&:hover {
+						text-decoration:underline;
+					}
+					svg {
+						fill: grey;
+						height: 26px;
+						margin-left: 0.3em;
+						margin-top: 0.3em;
+						position: absolute;
+						width: 26px;
+					}
 				}
-				p {
-				}
-
 				svg {
 			 		height:$img-height;
 			 		width:$col;					
 				}
-				#book-12-icon {
-					fill: #D37395;
-				}
-			}	
-			.next-book {
-			 	@extend .book-details;
-			 	#note-13-icon {
-			 		fill: #CAD7C5;
-			 	}		
 
+			}	
+			.next-button {
+			 	@extend .book-button;
+			 	.headline {
+				 }
+			}
+			.book-details, .next-details {
+				@extend .book-button;
+				color:grey;
+				border:none;
+				margin-top:0;
 			}
 		} // end options
 		footer {
